test/scc/ext/tm/semantic-errors/019.t
void test()
{
    void(*a)();
    void(*b)() _Transaction_safe = a;
}